# Color_Circles

./: .gitignore  CMakeLists.txt  README.md
include/: Bar.hpp  Circle.hpp  Component.hpp  Text.hpp  ThreadPool.hpp  Utility.hpp
src/: main.cpp
